--- a/StaffingSolution/Resources/layout/TabSelectedList.axml
+++ b/StaffingSolution/Resources/layout/TabSelectedList.axml
@@ -5,9 +5,16 @@
     android:layout_height="match_parent"
     android:background="#3b5998"
     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Selected List"
+        android:textSize="20sp"
+        android:gravity="center"
+    />
 
     <SearchView
-        android:id="@+id/customUserScreen"
+        android:id="@+id/selectedSearch"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:backgroundTint="#fff"
@@ -16,7 +23,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/allUserlistView"
+        android:id="@+id/selecetdList"
         android:background="#456789"
     />
+
 </LinearLayout>
