--- a/StaffingSolution/Resources/layout/LoginScreen.axml
+++ b/StaffingSolution/Resources/layout/LoginScreen.axml
@@ -25,6 +25,7 @@
         android:hint="Please enter username"
         android:layout_marginTop="20dp"
         android:textColorHint="#343434"
+        android:textColor="#000"
     />
     <EditText
         android:layout_height="50dp"
@@ -34,6 +35,7 @@
         android:hint="please enter password"
         android:layout_marginTop="10dp"
         android:textColorHint="#343434"
+        android:textColor="#000"
     />
      <Button
         android:id="@+id/loginBtn1"
