--- a/StaffingSolution/Resources/layout/SingleUser.xml
+++ b/StaffingSolution/Resources/layout/SingleUser.xml
@@ -3,33 +3,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#454545"
+    >
 
-<ImageView
+  <ImageView
         android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="#f54242"
+        android:layout_height="70dp"
         android:id="@+id/userPicId"
         />
 
     <LinearLayout 
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-            android:background="#671178"
-            android:textColor = "#ffffff"
+            android:layout_height="wrap_content"   
+        >
+       <TextView
+            android:textColor = "#000"
             android:id="@+id/userName"
-            android:layout_width="450dp"
-            android:layout_height="75dp" 
+            android:layout_width="200dp"
+            android:layout_height="35dp" 
             />
-            <TextView
+        <TextView
             android:textColor = "#ffffff"
-            android:background="#437811"
             android:id="@+id/userEmail"
-            android:layout_width="450dp"
-            android:layout_height="75dp" 
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="0.0dp" 
             />
     </LinearLayout>
 
