--- a/StaffingSolution/Resources/layout/WelComeScreen.axml
+++ b/StaffingSolution/Resources/layout/WelComeScreen.axml
@@ -25,7 +25,7 @@
     
 
     <TextView
-		android:text="One Solution for employee and job seeker"
+		android:text="One Solution for employe and job seeker"
 		android:id="@+id/slogan"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
