--- a/StaffingSolution/Resources/layout/LoginScreen.axml
+++ b/StaffingSolution/Resources/layout/LoginScreen.axml
@@ -4,19 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-	android:background="#3b5998"
+    android:background="#4879db"
 	android:paddingLeft="30dp"
 	android:paddingRight="30dp"
 	android:gravity="center"
     >
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login to your account"
         android:textColor="#ffffff"
         android:textSize="25sp" />
-    
     <EditText
         android:layout_height="50dp"
         android:layout_width="300dp"
@@ -45,9 +43,8 @@
         android:text="Login"
         android:textSize="20dp"
         android:layout_marginTop="10dp"
-        android:textColor="#ffffff"
+        android:textColor="#000"
     />
-    
     <TextView
         android:id="@+id/createAccount"
         android:layout_width="match_parent"
@@ -55,5 +52,4 @@
         android:text="Create a new account!"
         android:gravity="center"
     />
-
 </LinearLayout>
